<resources>
    <string name="app_name">ZenHub</string>

    <!-- Navigation Bar -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="unknown_user_name">Unknown User</string>
    <string name="nav_home">Home</string>
    <string name="nav_search">Search</string>
    <string name="nav_repos">Repositories</string>
    <string name="nav_starred">Starred</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_about">About</string>

    <!-- Login Activity -->
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_login">Username or email address</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="login_to_github">Login to GitHub</string>

    <!-- Repo list Activities -->
    <string name="title_activity_own_repos">Repositories</string>
    <string name="title_activity_starred_repos">Starred Repositories</string>
    <string name="repo_list_sortby">Sort by</string>
    <string name="repo_list_sort_dialog_title">Select sorting order</string>
    <string name="repo_stars"><i>%1$d stars</i></string>

    <!-- Main Repo Activity -->
    <string name="title_activity_repo">Repository Details</string>
    <string name="repo_tab_about">About</string>
    <string name="repo_tab_commits">Commits</string>
    <string name="repo_tab_issues">Issues</string>
    <string name="repo_tab_files">Files</string>
    <string name="select_branch">Branch</string>
    <string name="default_branch"><i>default branch</i></string>

    <!-- About tab of repo activity -->
    <string name="starred_image_desc">Starred status</string>
    <string name="stargazers"><b>Stargazers</b></string>
    <string name="repo_size"><b>Size</b></string>
    <string name="last_pushed"><b>Last pushed</b></string>
    <string name="avatar_image">Avatar image</string>
    <string name="readme_title">ReadMe</string>

    <!-- User Details -->
    <string name="user_joined">since %1$s</string>
    <string name="repos">Repos</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="gists">Gists</string>

    <!-- Received Events -->
    <string name="events_title">Received events</string>
    <string name="unsupported_event">Unsupported event %1$s.</string>
    <string name="watch_event">%1$s watching %2$s.</string>
    <string name="fork_event">forked %1$s.</string>
    <string name="pullrequest_event">%1$s pull request #%2$d on %3$s.</string>
    <string name="issues_event">%1$s issue #%2$d on %3$s.</string>
    <string name="create_event">created %1$s %2$s on %3$s</string>
    <string name="delete_event">deleted %1$s %2$s on %3$s</string>
    <string name="issue_comment">%1$s a comment on issue#%2$d on %3$s.</string>
    <string name="push_event">pushed to %1$s on %2$s.</string>

    <!-- Commit Details Activity -->
    <string name="commit_details_stats">by %1$s, touching %2$d files</string>

    <!-- User List Activity -->
    <string name="title_activity_followers">Followers</string>
    <string name="title_activity_following">Following</string>

    <!-- Search -->
    <string name="search_hint">Search GitHub</string>
    <string name="search_result_count">%1$d Results</string>
    <string-array name="search_sources">
        <item>Repos</item>
        <item>Users</item>
    </string-array>
    <string-array name="search_repos_sortby">
        <item>Best match</item>
        <item>Stars</item>
        <item>Forks</item>
        <item>Updated</item>
    </string-array>
    <string-array name="search_users_sortby">
        <item>Best match</item>
        <item>Followers</item>
        <item>Repositories</item>
        <item>Joined</item>
    </string-array>

    <!-- About -->
    <string name="title_activity_about">About</string>
    <string name="application_info_title">Application Info</string>
    <string name="app_version">Version</string>
    <string name="used_libraries_title">Used libraries</string>
    <string name="supportlib_link"><a href="https://developer.android.com/topic/libraries/support-library">support-library</a></string>
    <string name="kotlin_link"><a href="https://kotlinlang.org">kotlinlang.org</a></string>
    <string name="kotlin_coroutines_link"><a href="https://github.com/Kotlin/kotlinx.coroutines">kotlinx.coroutines</a></string>
    <string name="retrofit_link"><a href="https://square.github.io/retrofit/">square.github.io/retrofit</a></string>
    <string name="picasso_link"><a href="https://square.github.io/picasso/">square.github.io/picasso</a></string>
    <string name="highlightjs_link"><a href="https://github.com/PDDStudio/highlightjs-android">highlightjs-android</a></string>
    <string name="coroutines_retrofit_link"><a href="https://github.com/gildor/kotlin-coroutines-retrofit">kotlin-coroutines-retrofit</a></string>

    <!-- Settings -->
    <string name="title_activity_settings">Settings</string>
    <string name="pref_use_dark_theme">Use dark theme</string>

    <!-- Gists -->
    <string name="title_activity_gists">Gists</string>
    <string name="title_activity_gist_details">Gist Details</string>
    <string name="last_updated">Last updated %1$s</string>
    <string name="gist_delete">Delete Gist</string>
    <string name="gist_create">Create Gist</string>
    <string name="gist_send">Send Gist</string>
    <string name="public_gist">Public</string>
    <string name="gist_description">Description</string>
    <string name="gist_file_contents">File contents</string>
</resources>
